[project]
name = "hyperion"
version = "0.1.0"
description = "Scalable FastAPI-based inference service for LLMs/LVMs on Kubernetes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "redis==5.0.7",
    "prometheus-client==0.20.0",
    "pydantic==2.8.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "safety>=2.0.0",
    "bandit>=1.7.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"